--- a/EmailCrawler/EmailCrawler/EmailCrawler.csproj
+++ b/EmailCrawler/EmailCrawler/EmailCrawler.csproj
@@ -43,7 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Objects\Email.cs" />
+    <Compile Include="Objects\EmailCollection.cs" />
+    <Compile Include="Parser\Parser.cs" />
+    <Compile Include="Start.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
